<resources>
    <string name="app_name">Transcription Service</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_buttonlogin">Log in</string>
    <string name="title">Transcription Service</string>
    <string name="credit">Transcription Service :: KMUTT</string>
    <string name="streaming">Streaming ...</string>
    <string name="stopStreaming">Stop Streaming</string>
    <string name="muteMicrophone">Mute Microphone</string>
    <string name="sponsor">Sponsor by :</string>

    <!--for webRTC using this parameters-->
    <string name="host">203.151.94.63</string>
    <string name="ports">8007</string>

    <!--for web application using this parameters-->
    <string name="host_web">203.151.94.63</string>
    <string name="sub_folder_without_slash">transcription/</string>
    <string name="chklogin_php">chkloginandroid.php</string>
    <string name="gettopic_php">getTopicData.php</string>
    <string name="asrpost_php">asrpost.php</string>
</resources>
